@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: March 14, 2011</p>
+      <p>Last Updated: March 15, 2011</p>
     </td>
   </tr>
 </table>
@@ -2197,6 +2197,9 @@ nuttx-5.20 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
       PullUp/Down Input Configuration.
     * arch/arm/src/lpc17xx/lpc17_serial.h -- Now supports Auto-RTS and
       Auto-CTS modes.  This is needed to support SLIP.
+    * drivers/net/slip.c -- SLIP is now basically functional on the
+      LPC17xx with some caveats as described in the TODO list under
+      LPC17xx.
 
 apps-5.20 2011-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
