@@ -277,8 +277,7 @@ static uint16_t send_interrupt(struct uip_driver_s *dev, void *pvconn,
        * should already be in the ARP table.
        */
 
-#ifdef CONFIG_NET_ETHERNET
-#ifndef CONFIG_NET_ARP_IPIN
+#if defined(CONFIG_NET_ETHERNET) && defined (CONFIG_NET_ARP_IPIN)
       if (pstate->snd_sent != 0 || uip_arp_find(conn->ripaddr) != NULL)
 #endif
         {
@@ -294,7 +293,6 @@ static uint16_t send_interrupt(struct uip_driver_s *dev, void *pvconn,
           pstate->snd_time = g_system_timer;
 #endif
         }
-#endif /* CONFIG_NET_ETHERNET */
     }
 
   /* All data has been send and we are just waiting for ACK or re-transmit
